--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Generate Snake
         uses: Platane/snk@v2
         with:
-          github_user_name: your_github_username
+          github_user_name: sharbel78
           output: dist/github-contribution-grid-snake.svg
 
       - name: Upload artifact
