--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,28 +1,26 @@
-name: Generate Snake Animation
+name: Generate Snake Game
 
 on:
-  push:
-    branches:
-      - main
   schedule:
-    - cron: '0 0 * * *'
+    - cron: "0 */12 * * *"
 
 jobs:
   build:
+    name: Generate Snake Game
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v2
-
-      - name: Generate Snake
-        uses: Platane/snk@v2
+      - name: Generate Snake Game
+        uses: Platane/snk@v3
         with:
-          github_user_name: sharbel78
-          output: dist/github-contribution-grid-snake.svg
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
+          github_user_name: ${{ github.repository_owner }}
+          svg_out_path: dist/github-snake.svg
+          snake_color: 'blue'
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          name: snake
-          path: dist/github-contribution-grid-snake.svg
+          target_branch: output
+          build_dir: dist
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
